--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,17 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-      {
-        "name": "(lldb) Launch",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "/Users/alvinc/Documents/C++ Project/helloworld",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "/Users/alvinc/Documents/C++ Project",
-        "environment": [],
-        "externalConsole": true,
-        "MIMode": "lldb",
-        "preLaunchTask": "build"
-      }
-    ]
-  }
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Run C++ without Debugger",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${fileDirname}/${fileBasenameNoExtension}",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "externalConsole": true,
+      "MIMode": "lldb",
+      "preLaunchTask": "C/C++: clang++ build active file"
+    }
+  ]
+}
